fix: fixed TOC content overflow without scrollbar

--- a/source/css/layout/article-content.styl
+++ b/source/css/layout/article-content.styl
@@ -95,6 +95,7 @@ if ((hexo-config('magic.enable') && !hexo-config('magic.sidebar.enable') && hexo
     .article-toc {
       max-width: 188px;
       max-height: 600px;
+      overflow-y: auto;
       background: var(--background-color);
 
       if (hexo-config('magic.enable') == true) {
